Add Tailwind Congif Tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find Your Dream Home</title>
     <script src="<https://cdn.tailwindcss.com>"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              black: "#ffffff ",
+            },
+          },
+        },
+      };
+    </script>
   </head>
   <body></body>
 </html>
