Add Header,Sections and Footer Tags

--- a/index.html
+++ b/index.html
@@ -17,5 +17,20 @@
       };
     </script>
   </head>
-  <body></body>
+  <body>
+    <!-- Sanid -->
+    <head></head>
+    <main>
+      <section></section>
+      <section></section>
+      <!-- Michal -->
+      <section></section>
+      <section></section>
+      <section></section>
+      <!-- Mohammed -->
+      <section></section>
+      <section></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
