Mark up Head Section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
   </head>
   <body>
     <!-- Sanid -->
-    <head></head>
+    <head>
+      <img src="./icons/logo.svg" alt="Logo" />
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Service</a></li>
+          <li><a href="#">Agents</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <span>
+        <img src="./icons/search.svg" alt="search Icon" />
+        <img src="./icons/user.svg" alt="User Icon" />
+        <button>Sign up</button>
+      </span>
+    </head>
     <main>
       <section></section>
       <section></section>
