--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </span>
     </head>
     <main>
-      <section></section>
+      <section>test</section>
       <section></section>
       <!-- Michal -->
       <section></section>
