Mark up Find Your Dream Home Section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <!-- Sanid -->
+    <!-- Header -->
     <head>
       <img src="./icons/logo.svg" alt="Logo" />
       <nav>
@@ -36,8 +37,23 @@
       </span>
     </head>
     <main>
+      <!-- Find Your Dream Home Section -->
+      <section>
+        <div>
+          <h1>Find Your Dream Home</h1>
+          <p>
+            Explore our curated selection of exquisite properties meticulously
+            tailored to your unique dream home vision
+          </p>
+          <button>Sign up</button>
+        </div>
+        <figure>
+          <img src="./images/hero-image-1.png" alt="House Picture 1" />
+        </figure>
+      </section>
+      <!-- Form Section -->
       <section></section>
-      <section></section>
+
       <!-- Michal -->
       <section></section>
       <section></section>
