Mark up Form Section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
         </figure>
       </section>
       <!-- Form Section -->
-      <section></section>
+      <section>
+        <form action="" method="dialog">
+          <input type="text" name="location" placeholder="Location" />
+          <input type="text" name="type" placeholder="Type" />
+          <input type="text" name="price-range" placeholder="Price Range" />
+          <button type="submit">Sigh up</button>
+        </form>
+      </section>
 
       <!-- Michal -->
       <section></section>
