--- a/index.html
+++ b/index.html
@@ -52,8 +52,51 @@
       </section>
 
       <!-- Michal -->
-      <section></section>
-      <section></section>
+      <section>
+        <div>
+          <h3> Why Choose Us </h3>
+            <h6> Elevating Your Home Buying Experience with Expertise, 
+                Integrity, and Unmatched Personalized Service </h6>
+            </div>
+      </section>
+      <section>
+        <div>
+          <ul>
+            <li>
+              <img/>
+              <div>
+                <h5>Expert Guidance</h5>
+                <p>
+                  Benefit from our team's seasoned expertise for a smooth buying experience
+                </p>
+              </div>
+              <li>
+                <img/>
+                <div>
+                  <h5>Personalized Service</h5>
+                  <p>
+                    Our services adapt to your unique needs, making your journey stress-free
+                    </p>  
+                </div>
+                <li>
+                  <img/>
+                  <div>
+                    <h5>Transparent Process</h5>
+                    <p>
+                      Stay informed with our clear and honest approach to buying your home
+                    </p>
+                  </div>
+                  <li>
+                    <img/>
+                    <div>
+                      <h5>Exseptional Support</h5>
+                      <p>
+                        Providing peace of mind with our responsive and attentive customer service
+                      </p>
+                    </div>
+                  </ul>
+               </div>
+      </section>
       <section></section>
       <!-- Mohammed -->
       <section></section>
