Stye the header

--- a/index.html
+++ b/index.html
@@ -6,29 +6,45 @@
     <title>Find Your Dream Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="max-w-screen-2xl">
     <!-- Sanid -->
     <!-- Header -->
-    <head>
-      <img src="./icons/logo.svg" alt="Logo" />
+    <header
+      class="flex gap-4 justify-between items-center px-20 py-10 bg-[#FEF7F2]"
+    >
+      <img src="./icons/logo.svg" alt="Logo" class="cursor-pointer" />
+
       <nav>
-        <ul>
+        <ul
+          class="flex gap-10 items-center text-center text-[#2B1B12] text-lg font-bold"
+        >
           <li><a href="#">Home</a></li>
           <li><a href="#">Service</a></li>
           <li><a href="#">Agents</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
-      <span>
-        <img src="./icons/search.svg" alt="search Icon" />
-        <img src="./icons/user.svg" alt="User Icon" />
-        <button>Sign up</button>
+      <span class="flex gap-8 items-center">
+        <img
+          src="./icons/search.svg"
+          alt="search Icon"
+          class="w-8 cursor-pointer"
+        />
+        <img
+          src="./icons/user.svg"
+          alt="User Icon"
+          class="w-8 cursor-pointer"
+        />
+        <button
+          class="bg-[#2B1B12] text-white text-base font-semibold rounded-lg h-12 w-32"
+        >
+          Sign up
+        </button>
       </span>
-    </head>
+    </header>
     <main>
-
       <!-- Find Your Dream Home Section -->
-      <section>
+      <section class="bg-[#FEF7F2]">
         <div>
           <h1>Find Your Dream Home</h1>
           <p>
