--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find Your Dream Home</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              montserrat: ["Montserrat"],
+            },
+          },
+        },
+      };
+    </script>
   </head>
   <body class="max-w-screen-2xl">
     <!-- Sanid -->
@@ -16,7 +31,7 @@
 
       <nav>
         <ul
-          class="flex gap-10 items-center text-center text-[#2B1B12] text-lg font-bold"
+          class="flex gap-10 items-center text-center text-[#2B1B12] text-lg font-bold font-montserrat"
         >
           <li><a href="#">Home</a></li>
           <li><a href="#">Service</a></li>
@@ -36,7 +51,7 @@
           class="w-8 cursor-pointer"
         />
         <button
-          class="bg-[#2B1B12] text-white text-base font-semibold rounded-lg h-12 w-32"
+          class="bg-[#2B1B12] text-white text-base font-semibold rounded-lg h-12 w-32 font-montserrat"
         >
           Sign up
         </button>
