Add icons to the Icons folder

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               provincialPink: "#FEF7F2",
               saddle: "#4F3527",
               dustStorm: "#DDC7BB",
+              tobaccoBrown: "#695346",
             },
           },
         },
@@ -98,19 +99,19 @@
           method="dialog"
         >
           <input
-            class="p-4 rounded-lg"
+            class="p-4 rounded-lg placeholder-tobaccoBrown text-lg font-bold font-montserrat outline-none"
             type="text"
             name="location"
             placeholder="Location"
           />
           <input
-            class="p-4 rounded-lg"
+            class="p-4 rounded-lg placeholder-tobaccoBrown text-lg font-bold font-montserrat outline-none"
             type="text"
             name="type"
             placeholder="Type"
           />
           <input
-            class="p-4 rounded-lg"
+            class="p-4 rounded-lg placeholder-tobaccoBrown text-lg font-bold font-montserrat outline-none"
             type="text"
             name="price-range"
             placeholder="Price Range"
@@ -119,7 +120,7 @@
             type="submit"
             class="ml-4 bg-eternity text-white text-lg font-semibold rounded-lg h-14 w-40 font-montserrat"
           >
-            Sigh up
+            Sign up
           </button>
         </form>
       </section>
