--- a/index.html
+++ b/index.html
@@ -92,30 +92,49 @@
         </figure>
       </section>
       <!-- Form Section -->
-      <section class="flex items-center justify-center">
+      <section class="flex items-center justify-center pb-8">
         <form
-          class="flex items-center gap-6 bg-dustStorm max-w-6xl h-40 px-6 py-9 rounded-2xl"
+          class="flex items-center gap-6 bg-dustStorm h-40 px-6 py-9 rounded-2xl filter drop-shadow-md"
           action=""
           method="dialog"
         >
-          <input
-            class="p-4 rounded-lg placeholder-tobaccoBrown text-lg font-bold font-montserrat outline-none"
-            type="text"
-            name="location"
-            placeholder="Location"
-          />
-          <input
-            class="p-4 rounded-lg placeholder-tobaccoBrown text-lg font-bold font-montserrat outline-none"
-            type="text"
-            name="type"
-            placeholder="Type"
-          />
-          <input
-            class="p-4 rounded-lg placeholder-tobaccoBrown text-lg font-bold font-montserrat outline-none"
-            type="text"
-            name="price-range"
-            placeholder="Price Range"
-          />
+          <div class="relative flex items-center">
+            <input
+              class="p-4 rounded-lg placeholder-tobaccoBrown text-lg text-saddle font-bold font-montserrat max-w-60 border-2 border-white focus:border-tobaccoBrown focus:outline-none"
+              type="text"
+              name="location"
+              placeholder="Location"
+              autocomplete="address-line1"
+            />
+            <span class="absolute right-3">
+              <img src="./icons/location.svg" alt="Location Icon" />
+            </span>
+          </div>
+
+          <div class="relative flex items-center">
+            <input
+              class="p-4 rounded-lg placeholder-tobaccoBrown text-lg text-saddle font-bold font-montserrat max-w-60 border-2 border-white focus:border-tobaccoBrown focus:outline-none"
+              type="text"
+              name="type"
+              placeholder="Type"
+            />
+            <span class="absolute right-3">
+              <img src="./icons/home.svg" alt="House Icon" />
+            </span>
+          </div>
+
+          <div class="relative flex items-center">
+            <input
+              class="p-4 rounded-lg placeholder-tobaccoBrown text-lg text-saddle font-bold font-montserrat max-w-60 border-2 border-white focus:border-tobaccoBrown focus:outline-none"
+              type="text"
+              name="price-range"
+              placeholder="Price Range"
+            />
+            <span class="absolute right-3">
+              <img src="./icons/price.svg" alt="Coin Icon" />
+            </span>
+          </div>
+
           <button
             type="submit"
             class="ml-4 bg-eternity text-white text-lg font-semibold rounded-lg h-14 w-40 font-montserrat"
