Style the form section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <!-- Form Section -->
       <section class="flex items-center justify-center pb-8">
         <form
-          class="flex items-center gap-6 bg-dustStorm h-40 px-6 py-9 rounded-2xl filter drop-shadow-md"
+          class="relative -top-20 flex items-center gap-6 bg-dustStorm h-40 px-6 py-9 mb-4 rounded-2xl filter drop-shadow-md"
           action=""
           method="dialog"
         >
