Add a customized query screen to tailwind.config This optimize Tailwind query for screens from large to small

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <script>
       tailwind.config = {
         theme: {
+          screens: {
+            "2xl": { max: "1535px" },
+            xl: { max: "1279px" },
+            lg: { max: "1023px" },
+            md: { max: "767px" },
+            sm: { max: "639px" },
+          },
           extend: {
             fontFamily: {
               montserrat: ["Montserrat"],
@@ -147,48 +154,61 @@
       <!-- Michal -->
       <section>
         <div>
-          <h3> Why Choose Us </h3>
-            <h6> Elevating Your Home Buying Experience with Expertise, 
-                Integrity, and Unmatched Personalized Service </h6>
-            </div>
+          <h3>Why Choose Us</h3>
+          <h6>
+            Elevating Your Home Buying Experience with Expertise, Integrity, and
+            Unmatched Personalized Service
+          </h6>
+        </div>
       </section>
       <section>
         <div>
           <ul>
             <li>
-              <img/>
+              <img />
               <div>
                 <h5>Expert Guidance</h5>
                 <p>
-                  Benefit from our team's seasoned expertise for a smooth buying experience
+                  Benefit from our team's seasoned expertise for a smooth buying
+                  experience
                 </p>
               </div>
-              <li>
-                <img/>
-                <div>
-                  <h5>Personalized Service</h5>
-                  <p>
-                    Our services adapt to your unique needs, making your journey stress-free
-                    </p>  
-                </div>
-                <li>
-                  <img/>
-                  <div>
-                    <h5>Transparent Process</h5>
-                    <p>
-                      Stay informed with our clear and honest approach to buying your home
-                    </p>
-                  </div>
-                  <li>
-                    <img/>
-                    <div>
-                      <h5>Exseptional Support</h5>
-                      <p>
-                        Providing peace of mind with our responsive and attentive customer service
-                      </p>
-                    </div>
-                  </ul>
-               </div>
+            </li>
+
+            <li>
+              <img />
+              <div>
+                <h5>Personalized Service</h5>
+                <p>
+                  Our services adapt to your unique needs, making your journey
+                  stress-free
+                </p>
+              </div>
+            </li>
+
+            <li>
+              <img />
+              <div>
+                <h5>Transparent Process</h5>
+                <p>
+                  Stay informed with our clear and honest approach to buying
+                  your home
+                </p>
+              </div>
+            </li>
+
+            <li>
+              <img />
+              <div>
+                <h5>Exseptional Support</h5>
+                <p>
+                  Providing peace of mind with our responsive and attentive
+                  customer service
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section></section>
       <!-- Mohammed -->
