Make header section until form section responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Sanid -->
     <!-- Header -->
     <header
-      class="flex gap-4 justify-between items-center px-20 py-10 bg-provincialPink"
+      class="flex gap-4 justify-between items-center px-20 py-10 bg-provincialPink lg:flex-wrap"
     >
       <img src="./icons/logo.svg" alt="Logo" class="cursor-pointer" />
 
@@ -73,11 +73,13 @@
     </header>
     <main>
       <!-- Find Your Dream Home Section -->
-      <section class="bg-provincialPink flex gap-x-0 pl-20">
+      <section class="bg-provincialPink flex gap-x-0 pl-20 lg:flex-wrap">
         <div
           class="flex flex-col gap-10 justify-start items-start pt-36 -mr-40"
         >
-          <h1 class="text-eternity text-7xl font-bold font-montserrat">
+          <h1
+            class="text-eternity text-7xl font-bold font-montserrat lg:text-5xl md:text-4xl"
+          >
             Find Your Dream Home
           </h1>
           <p class="text-saddle text-lg font-bold font-montserrat max-w-md">
@@ -101,7 +103,7 @@
       <!-- Form Section -->
       <section class="flex items-center justify-center pb-8">
         <form
-          class="relative -top-20 flex items-center gap-6 bg-dustStorm h-40 px-6 py-9 mb-4 rounded-2xl filter drop-shadow-md"
+          class="relative -top-20 flex items-center gap-6 bg-dustStorm h-40 lg:h-auto px-6 py-9 mb-4 rounded-2xl filter drop-shadow-md lg:flex-wrap lg:justify-center"
           action=""
           method="dialog"
         >
