--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       };
     </script>
   </head>
+
   <body class="max-w-screen-2xl">
     <!-- Sanid -->
     <!-- Header -->
@@ -217,6 +218,118 @@
       <section></section>
       <section></section>
     </main>
-    <footer></footer>
+
+    <footer id="footer" class="bg-dustStorm text-xl text-black">
+      <section
+        class="grid grid-cols-6 sm:grid-cols-1 gap-x-4 gap-y-6 py-20 px-32 pb-32"
+      >
+        <div>
+          <img src="./icons/logo.svg" alt="Logo" class="cursor-pointer" />
+          <p class="py-4 px text-saddle text-lg font-montserrat max-w-md">
+            Bringing you closer to your dream home, one click at a time.
+          </p>
+        </div>
+
+        <div class="col-start-3 space-y-4">
+          <h2 class="text-eternity text-lg font-bold font-montserrat">About</h2>
+          <ul class="space-y-4">
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Our Story
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Careers
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Our Team
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Resources
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="space-y-4">
+          <h2 class="text-eternity text-lg font-bold font-montserrat">
+            Support
+          </h2>
+          <ul class="space-y-4">
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                FAQ
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Contact Us
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Help Center
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Terms of Service
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="space-y-4">
+          <h2 class="text-eternity text-lg font-bold font-montserrat">
+            Find Us
+          </h2>
+          <ul class="space-y-4">
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Events
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Locations
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Newsletter
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="space-y-4">
+          <h2 class="text-eternity text-lg font-bold font-montserrat">
+            Our Social
+          </h2>
+          <ul class="space-y-4">
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat"
+                >Instagram</a
+              >
+            </li>
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Facebook
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
+                Twitter (x)
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
