added icons to the footer

--- a/index.html
+++ b/index.html
@@ -313,18 +313,39 @@
           </h2>
           <ul class="space-y-4">
             <li>
-              <a href="#" class="text-saddle text-sm font-bold font-montserrat"
-                >Instagram</a
-              >
-            </li>
-            <li>
-              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
-                Facebook
+              <a href="#" class="flex flex-row items-center space space-x-2">
+                <img
+                  src="icons/instagram.png"
+                  alt="instagram"
+                  class="ml-[-5px]"
+                />
+                <span class="text-saddle text-sm font-bold font-montserrat">
+                  Instagram
+                </span>
               </a>
             </li>
             <li>
-              <a href="#" class="text-saddle text-sm font-bold font-montserrat">
-                Twitter (x)
+              <a href="#" class="flex flex-row items-center space space-x-2">
+                <img
+                  src="icons/facebook.png"
+                  alt="facebook"
+                  class="ml-[-5px]"
+                />
+                <span class="text-saddle text-sm font-bold font-montserrat">
+                  Facebook
+                </span>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="flex flex-row items-center space space-x-2">
+                <img
+                  src="icons/twitterx.png"
+                  alt="twitterx"
+                  class="ml-[-5px]"
+                />
+                <span class="text-saddle text-sm font-bold font-montserrat">
+                  Twitter (x)
+                </span>
               </a>
             </li>
           </ul>
