changed font size

--- a/index.html
+++ b/index.html
@@ -225,7 +225,9 @@
       >
         <div>
           <img src="./icons/logo.svg" alt="Logo" class="cursor-pointer" />
-          <p class="py-4 px text-saddle text-lg font-montserrat max-w-md">
+          <p
+            class="py-4 text-saddle text-sm font-montserrat max-w-md font-bold"
+          >
             Bringing you closer to your dream home, one click at a time.
           </p>
         </div>
