make the footer responsive for smaller screens

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
     <footer id="footer" class="bg-dustStorm text-xl text-black">
       <section
-        class="grid grid-cols-6 sm:grid-cols-1 gap-x-4 gap-y-6 py-20 px-32 pb-32"
+        class="grid grid-cols-6 lg:grid-cols-1 gap-x-4 gap-y-6 py-20 px-32 pb-32"
       >
         <div>
           <img src="./icons/logo.svg" alt="Logo" class="cursor-pointer" />
@@ -232,7 +232,7 @@
           </p>
         </div>
 
-        <div class="col-start-3 space-y-4">
+        <div class="col-start-3 lg:col-start-1 space-y-4">
           <h2 class="text-eternity text-lg font-bold font-montserrat">About</h2>
           <ul class="space-y-4">
             <li>
