added contact title text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">Service</a></li>
           <li><a href="#">Agents</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
       <span class="flex gap-8 items-center">
@@ -215,7 +215,14 @@
       <section></section>
       <!-- Mohammed -->
       <section></section>
-      <section></section>
+      <section id="contact" class="bg-white">
+        <h2
+          class="text-eternity text-4xl lg:text-4xl md:text-3xl text-center font-bold font-montserrat py-20"
+        >
+          Do you have any Question? <br />
+          Get Help From Us
+        </h2>
+      </section>
     </main>
     <footer></footer>
   </body>
