added content text for contact section

--- a/index.html
+++ b/index.html
@@ -218,11 +218,30 @@
       <section></section>
       <section id="contact" class="bg-white">
         <h2
-          class="text-eternity text-4xl lg:text-4xl md:text-3xl text-center font-bold font-montserrat py-20"
+          class="text-eternity text-3xl md:text-2xl text-center font-bold font-montserrat py-7"
         >
           Do you have any Question? <br />
           Get Help From Us
         </h2>
+
+        <ul class="flex flex-row justify-center space-x-14 items-center">
+          <li>
+            <a href="#" class="flex flex-row items-center space space-x-2">
+              <img src="icons/icons8-verified.png" alt="verified" class="w-5" />
+              <span class="text-saddle text-xs font-bold font-montserrat">
+                Chat live with our support team
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="flex flex-row items-center space space-x-2">
+              <img src="icons/icons8-verified.png" alt="verified" class="w-5" />
+              <span class="text-saddle text-xs font-bold font-montserrat">
+                Browse our FAQ
+              </span>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
 
