Mark up 'We Help You' Section

--- a/index.html
+++ b/index.html
@@ -153,6 +153,33 @@
           </button>
         </form>
       </section>
+      <section>
+        <figure>
+          <img src="./images/luxury-home.png" alt="Luxury House" />
+        </figure>
+        <div>
+          <h2>We Help You To Find Your Dream Home</h2>
+          <p>
+            From cozy cottages to luxurious estates, our dedicated team guides
+            you through every step of the journey, ensuring your dream home
+            becomes a reality
+          </p>
+          <div>
+            <div>
+              <p>8K+</p>
+              <p>Houses Available</p>
+            </div>
+            <div>
+              <p>6K+</p>
+              <p>Houses Sold</p>
+            </div>
+            <div>
+              <p>2K+</p>
+              <p>Trusted Agents</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- Michal -->
       <section>
