--- a/index.html
+++ b/index.html
@@ -153,27 +153,28 @@
           </button>
         </form>
       </section>
-      <section>
+
+      <section class="flex gap-20 px-20 pb-28">
         <figure>
           <img src="./images/luxury-home.png" alt="Luxury House" />
         </figure>
-        <div>
+        <div class="flex flex-col gap-10">
           <h2>We Help You To Find Your Dream Home</h2>
           <p>
             From cozy cottages to luxurious estates, our dedicated team guides
             you through every step of the journey, ensuring your dream home
             becomes a reality
           </p>
-          <div>
-            <div>
+          <div class="flex gap-10">
+            <div class="flex flex-col">
               <p>8K+</p>
               <p>Houses Available</p>
             </div>
-            <div>
+            <div class="flex flex-col">
               <p>6K+</p>
               <p>Houses Sold</p>
             </div>
-            <div>
+            <div class="flex flex-col">
               <p>2K+</p>
               <p>Trusted Agents</p>
             </div>
