Finish styling 'We Help You' section

--- a/index.html
+++ b/index.html
@@ -154,29 +154,45 @@
         </form>
       </section>
 
-      <section class="flex gap-20 px-20 pb-28">
+      <section
+        class="flex lg:flex-wrap justify-center items-start gap-16 px-20 pb-28"
+      >
         <figure>
-          <img src="./images/luxury-home.png" alt="Luxury House" />
+          <img
+            class="rounded-2xl"
+            src="./images/luxury-home.png"
+            alt="Luxury House"
+          />
         </figure>
-        <div class="flex flex-col gap-10">
-          <h2>We Help You To Find Your Dream Home</h2>
-          <p>
+        <div class="flex flex-col gap-10 pt-3 max-w-lg">
+          <h2
+            class="text-eternity text-4xl font-extrabold font-montserrat max-w-md"
+          >
+            We Help You To Find Your Dream Home
+          </h2>
+          <p class="text-saddle text-lg font-bold font-montserrat">
             From cozy cottages to luxurious estates, our dedicated team guides
             you through every step of the journey, ensuring your dream home
             becomes a reality
           </p>
           <div class="flex gap-10">
             <div class="flex flex-col">
-              <p>8K+</p>
-              <p>Houses Available</p>
+              <p class="text-saddle text-5xl font-bold font-montserrat">8K+</p>
+              <p class="text-saddle text-lg font-semibold font-montserrat">
+                Houses Available
+              </p>
             </div>
             <div class="flex flex-col">
-              <p>6K+</p>
-              <p>Houses Sold</p>
+              <p class="text-saddle text-5xl font-bold font-montserrat">6K+</p>
+              <p class="text-saddle text-lg font-semibold font-montserrat">
+                Houses Sold
+              </p>
             </div>
             <div class="flex flex-col">
-              <p>2K+</p>
-              <p>Trusted Agents</p>
+              <p class="text-saddle text-5xl font-bold font-montserrat">2K+</p>
+              <p class="text-saddle text-lg font-semibold font-montserrat">
+                Trusted Agents
+              </p>
             </div>
           </div>
         </div>
