Make House picture looks like behind the form. Change 'Price Range' input to number type.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <figure>
           <img
             class="mr-40"
-            src="./images/hero-image-1.png"
+            src="./images/hero-image-croped.png"
             alt="House Picture 1"
           />
         </figure>
@@ -136,7 +136,7 @@
           <div class="relative flex items-center">
             <input
               class="p-4 rounded-lg placeholder-tobaccoBrown text-lg text-saddle font-bold font-montserrat max-w-60 border-2 border-white focus:border-tobaccoBrown focus:outline-none"
-              type="text"
+              type="number"
               name="price-range"
               placeholder="Price Range"
             />
