added about dwello title

--- a/index.html
+++ b/index.html
@@ -259,7 +259,15 @@
       </section>
       <section></section>
       <!-- Mohammed -->
-      <section></section>
+      <section id="contact" class="bg-provincialPink">
+        <h2
+          class="text-eternity text-3xl md:text-2xl text-center font-bold font-montserrat py-7 pt-12"
+        >
+          What People Say <br />
+          About Dwello
+        </h2>
+      </section>
+
       <section id="contact" class="bg-white">
         <h2
           class="text-eternity text-3xl md:text-2xl text-center font-bold font-montserrat py-7 pt-24"
@@ -267,6 +275,10 @@
           Do you have any Question? <br />
           Get Help From Us
         </h2>
+
+        <ul>
+          <li></li>
+        </ul>
 
         <ul class="flex flex-row justify-center space-x-14 items-center">
           <li>
