fixed about dwello items size

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <ul
           class="w-full h-auto flex flex-row justify-center items-center space-x-8"
         >
-          <li class="w-72 bg-dustStorm rounded-xl">
+          <li class="w-72 h-80 bg-dustStorm rounded-xl">
             <img src="icons/Group 15.png" alt="" class="rounded-t-xl" />
             <div>
               <div class="flex flex-row m-4">
@@ -305,7 +305,7 @@
             </p>
           </li>
 
-          <li class="w-72 bg-dustStorm rounded-xl">
+          <li class="w-72 h-80 bg-dustStorm rounded-xl">
             <img src="icons/Group 16.png" alt="" class="rounded-t-xl" />
             <div>
               <div class="flex flex-row m-4">
@@ -340,7 +340,7 @@
             </p>
           </li>
 
-          <li class="w-72 bg-dustStorm rounded-xl">
+          <li class="w-72 h-80 bg-dustStorm rounded-xl">
             <img src="icons/Group 17.png" alt="" class="rounded-t-xl" />
             <div>
               <div class="flex flex-row m-4">
@@ -376,15 +376,15 @@
           </li>
         </ul>
 
-        <div class="p-6 flex flex-row items-center justify-center space-x-6">
+        <div class="p-8 flex flex-row items-center justify-center space-x-6">
           <button
-            class="flex items-center justify-center bg-eternity h-10 w-10 rounded-full text-white font-montserrat text-2xl"
+            class="hover:bg-amber-700 flex items-center justify-center bg-eternity h-10 w-10 rounded-full text-white font-montserrat text-2xl"
           >
             <img src="icons/arrow left.png" alt="" class="h-3" />
           </button>
 
           <button
-            class="flex items-center justify-center bg-eternity h-10 w-10 rounded-full text-white text-2xl"
+            class="hover:bg-amber-700 flex items-center justify-center bg-eternity h-10 w-10 rounded-full text-white text-2xl"
           >
             <img src="icons/attow right.png" alt="" class="h-3" />
           </button>
