fixed-about-dwello-listitems

--- a/index.html
+++ b/index.html
@@ -261,14 +261,14 @@
       <!-- Mohammed -->
       <section id="about" class="bg-provincialPink">
         <h2
-          class="text-eternity text-3xl md:text-2xl text-center font-bold font-montserrat py-7 pt-12"
+          class="text-eternity text-2xl md:text-2xl text-center font-bold font-montserrat py-7 pt-12"
         >
           What People Say <br />
           About Dwello
         </h2>
 
         <ul
-          class="w-full h-auto flex flex-row justify-center items-center space-x-8"
+          class="w-full h-auto flex flex-row lg:flex-col justify-center items-center space-x-8 lg:space-x-0 lg:space-y-8"
         >
           <li class="w-72 h-80 bg-dustStorm rounded-xl">
             <img src="icons/Group 15.png" alt="" class="rounded-t-xl" />
