--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -153,139 +153,7 @@
           </button>
         </form>
       </section>
-      <!-- Cards -->
-      <!-- Info -->
-      <section>
-        <div>
-          <h3 class="text-3xl text-center my-5 font-bold font-montserrat"> Why Choose Us </h3>
-            <h6 class="my-8 text-center mb-24 font-bold font-montserrat"> Elevating Your Home Buying Experience with Expertise, 
-                Integrity,<br> and Unmatched Personalized Service </h6>
-            </div>
-      </section>
-      <!-- Expert Guidance -->
-      <div class="flex flex-col my:8 lg:flex-row gap-11">
-        <div class="items-center bg-[#DDC7BB] rounded-3xl p-4 drop-shadow-lg">
-          <img src=".icons-section-4/expert_icon.png" alt="EG" class="bg-[#FBF5F1] w-16 p-4 rounded-lg mb-3"/>
-          <p class="font montserrat]"><b>Expert Guidance</b></p>
-          <p class="font-semibold text-[#4F3527]">
-            Benefit from our team's seasoned expertise for a smooth buying
-            experience</p>
-        </div>
-      <!-- Personalized Service -->
-        <div class="items-center bg-[#DDC7BB] rounded-3xl p-4 drop-shadow-lg">
-          <img src=".icons-section-4/personalized_icon.png" alt="PS" class="bg-[#FBF5F1] w-16 p-4 rounded-lg mb-3"/>
-          <p class="font montserrat"><b>Personalized Service</b></p>
-          <p class="font-semibold text-[#4F3527]">
-            Our services adapt to your unique needs, making your journey
-            stress-free
-          </p>
-        </div>
-      <!-- Transparent Process -->
-        <div class="items-center bg-[#DDC7BB] rounded-3xl p-4 drop-shadow-lg">
-          <img src=".icons-section-4/transparent_icon.png" alt="TP" class="bg-[#FBF5F1] w-16 p-4 rounded-lg mb-3"/>
-          <p class="font montserrat"><b>Transparent Process</b></p>
-          <p class="font-semibold text-[#4F3527]">
-            Stay informed with our clear and honest approach to buying your
-            home
-          </p>
-        </div>
-      <!-- Exceptional Support -->
-        <div class="items-center bg-[#DDC7BB] rounded-2xl p-4 drop-shadow-lg">
-          <img src=".icons-section-4/exceptional_icon.png" alt="ES" class="bg-[#FBF5F1] w-16 p-4 rounded-lg mb-3"/>
-          <p class="font-bold py-3 text-[#2B1B12]">Exceptional Support</p>
-          <p class="font-semibold text-[#4F3527]">
-            Providing peace of mind with our responsive and attentive customer
-            service
-          </p>
-        </div>
-      </div>
-    </section>
-    <!-- Recidences -->
-      <section class="max-w-[1440px] mx-6 lg:mx-auto">
-            <div>
-              <h3 class="text-3xl text-center my-5 mt-12 font-bold font-montserrat">Our Popular Residences</h3>
-            </div>
-        <div class="lg:mx-[104px] flex flex-col lg:mb-8 my:8 lg:py-10 lg:flex-row gap-12">
-      <!-- First -->
-              <div class="block rounded-lg bg-[#DDC7BB] drop-shadow-lg w-">
-              <img src=".image-section-5/1st.png" alt="SF" class="rounded-t-lg w-full"/>
-              <div class="p-5">
-                <div class="flex w-full mb-6">
-                  <img src=".res_icons/location.png" alt="locationicon" class="w-6 mr-2" />
-                  <p class="font-montserrat"><b>San Francisco, California</b></p>
-                </div>
-                <div class="flex flex-row space-x-9 mb-4">
-                  <div class="flex space-x-2 flex-row">
-                    <img src=".res_icons/rooms.png" alt="roomsicon" class="bg-white p-1 w-6 rounded-sm"/>
-                    <p class="font-semibold text-[#4F3527]">4 rooms</p>
-                  </div>
-                  <div class="flex space-x-2 flex-row">
-                    <img src=".res_icons/size.png" alt="sizeicon" class="bg-white p-1 w-6 rounded-sm"/>
-                    <p class="font-semibold text-[#4F3527]">3,500 sq ft</p>
-                  </div>
-                </div>
-                <div class="flex flex-row justify-between">
-                  <button class="bg-[#2b1b12] text-white w-[98px] h-[40px] 
-                    font-semibold rounded-lg hover:bg-neutral-600">Sign up
-                  </button>
-                  <p class="font-bold text-[22px] text-[#4F3527]">$2,500,000</p>
-                </div>
-              </div>
-            </div>
-      <!-- Second Picture -->
-              <div class="block rounded-lg bg-[#DDC7BB] drop-shadow-lg w-">
-              <img src=".image-section-5/2nd.png" alt="BH" class="rounded-t-lg w-full"/>
-              <div class="p-5">
-                <div class="flex w-full mb-6">
-                  <img src="" alt="location" class="w-6 mr-2" />
-                  <p class="font-montserrat"><b>Beverly Hills, California</b></p>
-                </div>
-                <div class="flex flex-row space-x-9 mb-4">
-                  <div class="flex space-x-2 flex-row">
-                    <img src="img/rooms.svg" alt="roomicon" class="bg-white p-1 w-6 rounded-sm"/>
-                    <p class="font-semibold text-[#4F3527]">3rooms</p>
-                  </div>
-                  <div class="flex space-x-2 flex-row">
-                    <img src="img/size.svg" alt="roomicon" class="bg-white p-1 w-6 rounded-sm"/>
-                    <p class="font-semibold text-[#4F3527]">1,500 sq ft</p>
-                  </div>
-                </div>
-                <div class="flex flex-row justify-between">
-                  <button class="bg-[#2b1b12] text-white w-[98px] h-[40px] 
-                    font-semibold rounded-lg hover:bg-neutral-600">Sign up
-                  </button>
-                  <p class="font-bold text-[22px] text-[#4F3527]">$850,000</p>
-                </div>
-              </div>
-            </div>
-      <!-- Third Picture -->
-              <div class="block rounded-lg bg-[#DDC7BB] drop-shadow-lg w-">
-              <img src=".image-section-5/3rd.png" alt="SF" class="rounded-t-lg w-full"/>
-              <div class="p-5">
-                <div class="flex w-full mb-6">
-                  <img src="" alt="location" class="w-6 mr-2" />
-                  <p class="font-montserrat"><b>Palo Alto, California</b></p>
-                </div>
-                <div class="flex flex-row space-x-9 mb-4">
-                  <div class="flex space-x-2 flex-row">
-                    <img src="img/rooms.svg" alt="roomicon" class="bg-white p-1 w-6 rounded-sm"/>
-                    <p class="font-semibold text-[#4F3527]">4 rooms</p>
-                  </div>
-                  <div class="flex space-x-2 flex-row">
-                    <img src="img/size.svg" alt="roomicon" class="bg-white p-1 w-6 rounded-sm"/>
-                    <p class="font-semibold text-[#4F3527]">3,500 sq ft</p>
-                  </div>
-                </div>
-                <div class="flex flex-row justify-between">
-                  <button class="bg-[#2b1b12] text-white w-[98px] h-[40px] 
-                    font-semibold rounded-lg hover:bg-neutral-600">Sign up
-                  </button>
-                  <p class="font-bold text-[22px] text-[#4F3527]">$2,500,000</p>
-                </div>
-              </div>
-            </div>
-        </section>
-=======
+
       <section
         class="flex lg:flex-wrap justify-center items-start gap-16 px-20 pb-28"
       >
@@ -329,17 +197,152 @@
           </div>
         </div>
       </section>
+
+      <!-- Michal -->
+      <!-- Cards -->
+      <!-- Info -->
+      <section>
+        <div>
+          <h3 class="text-3xl text-center my-5 font-bold font-montserrat"> Why Choose Us </h3>
+            <h6 class="my-8 text-center mb-24 font-bold font-montserrat"> Elevating Your Home Buying Experience with Expertise, 
+                Integrity,<br> and Unmatched Personalized Service </h6>
+            </div>
+      </section>
+      <!-- Expert Guidance -->
+      <section class="flex flex-row justify-center">
+      <div class="flex flex-col gap-11">
+        <div class="items-center bg-[#DDC7BB] rounded-3xl p-4 drop-shadow-lg">
+          <img src="./icons-section-4/expert_icon.png" alt="EG" class="bg-[#FBF5F1] w-16 p-4 rounded-lg mb-3"/>
+          <p class="font montserrat]"><b>Expert Guidance</b></p>
+          <p class="font-semibold text-[#4F3527]">
+            Benefit from our team's seasoned expertise for a smooth buying
+            experience</p>
+        </div>
+      <!-- Personalized Service -->
+        <div class="items-center bg-[#DDC7BB] rounded-3xl p-4 drop-shadow-lg">
+          <img src="./icons-section-4/personalized_icon.png" alt="PS" class="bg-[#FBF5F1] w-16 p-4 rounded-lg mb-3"/>
+          <p class="font montserrat"><b>Personalized Service</b></p>
+          <p class="font-semibold text-[#4F3527]">
+            Our services adapt to your unique needs, making your journey
+            stress-free
+          </p>
+        </div>
+      <!-- Transparent Process -->
+        <div class="items-center bg-[#DDC7BB] rounded-3xl p-4 drop-shadow-lg">
+          <img src="./icons-section-4/transparent_icon.png" alt="TP" class="bg-[#FBF5F1] w-16 p-4 rounded-lg mb-3"/>
+          <p class="font montserrat"><b>Transparent Process</b></p>
+          <p class="font-semibold text-[#4F3527]">
+            Stay informed with our clear and honest approach to buying your
+            home
+          </p>
+        </div>
+      <!-- Exceptional Support -->
+        <div class="items-center bg-[#DDC7BB] rounded-2xl p-4 drop-shadow-lg">
+          <img src="./icons-section-4/exceptional_icon.png" alt="ES" class="bg-[#FBF5F1] w-16 p-4 rounded-lg mb-3"/>
+          <p class="font-bold py-3 text-[#2B1B12]">Exceptional Support</p>
+          <p class="font-semibold text-[#4F3527]">
+            Providing peace of mind with our responsive and attentive customer
+            service
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Recidences -->
+      <section class="mx-6">
+            <div>
+              <h3 class="text-3xl text-center my-5 mt-12 font-bold font-montserrat">Our Popular Residences</h3>
+            </div>
+        <div class="flex flex-row lg:py-10 gap-12">
+      <!-- First -->
+              <div class="block rounded-lg bg-[#DDC7BB] drop-shadow-lg">
+              <img src="./image-section-5/1st.png" alt="SF" class="rounded-t-lg"/>
+              <div class="p-5">
+                <div class="mb-6">
+                  <img src="./res_icons/location.png" alt="locationicon" class="w-6 mr-2" />
+                  <p class="font-montserrat"><b>San Francisco, California</b></p>
+                </div>
+                <div class="flex flex-row space-x-9 mb-4">
+                  <div class="flex space-x-2 flex-row">
+                    <img src="./res_icons/rooms.png" alt="roomsicon" class="bg-white p-1 w-6 rounded-sm"/>
+                    <p class="font-semibold text-[#4F3527]">4 rooms</p>
+                  </div>
+                  <div class="flex space-x-2 flex-row">
+                    <img src="./res_icons/size.png" alt="sizeicon" class="bg-white p-1 w-6 rounded-sm"/>
+                    <p class="font-semibold text-[#4F3527]">3,500 sq ft</p>
+                  </div>
+                </div>
+                <div class="flex flex-row justify-between">
+                  <button class="bg-[#2b1b12] text-white w-[98px] h-[40px] 
+                    font-semibold rounded-lg hover:bg-neutral-600">Sign up
+                  </button>
+                  <p class="font-bold text-[22px] text-[#4F3527]">$2,500,000</p>
+                </div>
+              </div>
+            </div>
+      <!-- Second Picture -->
+              <div class="block rounded-lg bg-[#DDC7BB] drop-shadow-lg w-">
+              <img src="./image-section-5/2nd.png" alt="BH" class="rounded-t-lg w-full"/>
+              <div class="p-5">
+                <div class="flex w-full mb-6">
+                  <img src="" alt="location" class="w-6 mr-2" />
+                  <p class="font-montserrat"><b>Beverly Hills, California</b></p>
+                </div>
+                <div class="flex flex-row space-x-9 mb-4">
+                  <div class="flex space-x-2 flex-row">
+                    <img src="./res_icons/rooms.png" alt="roomicon" class="bg-white p-1 w-6 rounded-sm"/>
+                    <p class="font-semibold text-[#4F3527]">3rooms</p>
+                  </div>
+                  <div class="flex space-x-2 flex-row">
+                    <img src="./res_icons/size.png" alt="roomicon" class="bg-white p-1 w-6 rounded-sm"/>
+                    <p class="font-semibold text-[#4F3527]">1,500 sq ft</p>
+                  </div>
+                </div>
+                <div class="flex flex-row justify-between">
+                  <button class="bg-[#2b1b12] text-white w-[98px] h-[40px] 
+                    font-semibold rounded-lg hover:bg-neutral-600">Sign up
+                  </button>
+                  <p class="font-bold text-[22px] text-[#4F3527]">$850,000</p>
+                </div>
+              </div>
+            </div>
+      <!-- Third Picture -->
+              <div class="block rounded-lg bg-[#DDC7BB] drop-shadow-lg w-">
+              <img src="./image-section-5/3rd.png" alt="SF" class="rounded-t-lg w-full"/>
+              <div class="p-5">
+                <div class="flex w-full mb-6">
+                  <img src="res_icons/location.png" alt="locationicon" class="w-6 mr-2" />
+                  <p class="font-montserrat"><b>Palo Alto, California</b></p>
+                </div>
+                <div class="flex flex-row space-x-9 mb-4">
+                  <div class="flex space-x-2 flex-row">
+                    <img src="res_icons/rooms.png" alt="roomicon" class="bg-white p-1 w-6 rounded-sm"/>
+                    <p class="font-semibold text-[#4F3527]">4 rooms</p>
+                  </div>
+                  <div class="flex space-x-2 flex-row">
+                    <img src="res_icons/size.png" alt="roomicon" class="bg-white p-1 w-6 rounded-sm"/>
+                    <p class="font-semibold text-[#4F3527]">3,500 sq ft</p>
+                  </div>
+                </div>
+                <div class="flex flex-row justify-between">
+                  <button class="bg-[#2b1b12] text-white w-[98px] h-[40px] 
+                    font-semibold rounded-lg hover:bg-neutral-600">Sign up
+                  </button>
+                  <p class="font-bold text-[22px] text-[#4F3527]">$2,500,000</p>
+                </div>
+              </div>
+            </div>
+        </section>
       <!-- Mohammed -->
       <section id="about" class="bg-provincialPink">
         <h2
-          class="text-eternity text-2xl md:text-2xl text-center font-bold font-montserrat py-7 pt-12"
+          class="text-eternity text-3xl md:text-2xl text-center font-bold font-montserrat py-7 pt-12"
         >
           What People Say <br />
           About Dwello
         </h2>
 
         <ul
-          class="w-full h-auto flex flex-row lg:flex-col justify-center items-center space-x-8 lg:space-x-0 lg:space-y-8"
+          class="w-full h-auto flex flex-row justify-center items-center space-x-8"
         >
           <li class="w-72 h-80 bg-dustStorm rounded-xl">
             <img src="icons/Group 15.png" alt="" class="rounded-t-xl" />
@@ -658,6 +661,3 @@
     </footer>
   </body>
 </html>
-
-     
-     
